@@ -3,6 +3,13 @@ For full details, see the git log at: https://github.com/ksh93/ksh
 
 Any uppercase BUG_* names are modernish shell bug IDs.
 
+2021-12-29:
+
+- Fixed numerous build errors that prevented ksh from running on Haiku OS.
+
+- Added support for the SIGKILLTHR signal on operating systems that
+  implement it.
+
 2021-12-28:
 
 - Added three options to the ulimit builtin with the same names and
